--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "json2html",
+  "name": "editorjs2html",
+  "private": false,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
